--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -233,6 +233,8 @@
     "|`default_precision` | 0 < float | Will apply to `pubs` that don't have presicion. The precision signifies the acceptable error on the expectation values of the observables in absolute value.  Namely, the QPU runtime for mitigation will be determined to provide output values for all the observables of interest that fall within a `1σ` confidence interval of the target precision. If multiple observables are provided, the mitigation will run until the target precision is reached for each of the input observables. | 0.02|\n",
     "|`max_execution_time` | 0 < integer < 28,800 (8 hours)| Allows you to limit the QPU time, specified in seconds, to be used for the entire QESEM process. Please find additional details below.| 3,600 (one hour)|\n",
     "| `transpilation_level` | 0 / 1 | See description below | 1|\n",
+    "| `execution_mode` | \"session\" / \"batch\" | See description below | \"batch\"|\n",
+    "\n",
     "\n",
     "<Admonition type=\"caution\">The QPU time estimation changes from one backend to another. Therefore, when executing the QESEM function, make sure to run it on the same backend that was selected when obtaining the QPU time estimation. </Admonition>\n",
     "\n",
@@ -242,6 +244,10 @@
     "\n",
     "\n",
     "- `transpilation_level`: After a circuit is submitted to QESEM, it automatically prepares several alternative circuit transpilations and chooses the one that minimizes QPU time. For instance, alternative transpilations might utilize Qedma-optimized fractional RZZ gates to reduce the circuit depth. Of course, all transpilations are equivalent to the input circuit, in terms of their ideal output. To exert more control over the circuit transpilation, set the transpilation level in the `options`. While `\"transpilation_level\": 1 ` corresponds to the default behavior described above, `\"transpilation_level\": 0 ` includes only minimal modifications required to the original circuit; for example, ‘layerification’ - the organization of circuit operations into ‘layers’ of simultaneous two-qubit gates. Note that automatic hardware-mapping onto high-fidelity qubits is applied in any case.\n",
+    "\n",
+    "- `execution_mode` - The execution mode allows the user to choose between running the QESEM job in either a dedicated session mode (where QESEM automatically creates a session) or in multiple batches. Session mode is more expensive because both classical computations (QESEM’s and IBM’s ) and QPU computations are included in the usage calculation, but the overall wall time is expected to be significantly shorter compared to batch mode.\n",
+    "In batch mode, QESEM processes jobs in multiple batches. While drifts may occur when running over an extended period, which is more likely in batch mode, QESEM incorporates measures to identify and compensate for these drifts.\n",
+    "For users with unlimited access to QPUs (e.g., on-premises setups), it is recommended to use session mode for faster QESEM execution.\n",
     "\n",
     "| `transpilation_level` | description |\n",
     "|:-:|:--|\n",
