--- a/docs/guides/optimize-for-hardware.mdx
+++ b/docs/guides/optimize-for-hardware.mdx
@@ -67,4 +67,5 @@ can be run on IBM&reg; hardware using IBM Qiskit Runtime.
 * [Operator Backpropagation (OBP)](./qiskit-addons-obp)
   * [Getting started with OBP](./qiskit-addons-obp-get-started)
 * [Circuit cutting](./qiskit-addons-cutting)
+  * [Getting started with circuit cutting using gate cuts](./qiskit-addons-cutting-gates)
   * [Getting started with circuit cutting using wire cuts](./qiskit-addons-cutting-wires)
