Apply suggestions from @abbycross' code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Get started with circuit cutting using gate cuts\n",
     "\n",
-    "This guide demonstrates two working examples of using gate cuts to get started working with the `qiskit-addon-cutting` package. It will cover using gate cutting to reduce the circuit width (the number of qubits) and circuit depth (the number of circuit instructions). We will cut gates to enable the reconstruction of a four-qubit circuit using two two-qubit subexperiments.\n",
+    "This guide demonstrates two working examples of gate cuts with the `qiskit-addon-cutting` package. It covers using gate cutting to reduce the circuit width (the number of qubits) and circuit depth (the number of circuit instructions). The gate cutting enables reconstructing a four-qubit circuit using two two-qubit subexperiments.\n",
     "\n",
-    "The first example will use the [`EfficentSU2`](../api/qiskit/qiskit.circuit.library.EfficientSU2) ansatz and reconstructs the following observable:"
+    "The first example uses the [`EfficentSU2`](/api/qiskit/qiskit.circuit.library.EfficientSU2) ansatz and reconstructs the following observable:"
    ]
   },
   {
@@ -69,10 +69,10 @@
    "source": [
     "## Gate cutting to reduce circuit width\n",
     "\n",
-    "We will start by partitioning the circuit and observable into *subcircuits* and *subobservables* using the [`partition_problem`](../api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) method. This function will ingest a partitioning scheme according to a label string of the form `\"AABB\"` where each label in this string corresponds to the `circuit` qubit in the same index. Qubits sharing a common partition label will be grouped together, and any non-local gates which span more than one partition will be cut.\n",
+    "First, partition the circuit and observable into *subcircuits* and *subobservables* using the [`partition_problem`](/api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) method. This function ingests a partitioning scheme according to a label string of the form `\"AABB\"` where each label in this string corresponds to the `circuit` qubit in the same index. Qubits sharing a common partition label are grouped together, and any non-local gates that span more than one partition will be cut.\n",
     "\n",
     "<Admonition type=\"information\" title=\"Note\">\n",
-    "   The observables kwarg to partition_problem is of type PauliList. Observable term coefficients and phases are ignored during decomposition of the problem and execution of the subexperiments. They may be re-applied during reconstruction of the expectation value.\n",
+    "   The `observables` kwarg to `partition_problem` is of type PauliList. Observable term coefficients and phases are ignored during decomposition of the problem and execution of the subexperiments. They may be re-applied during reconstruction of the expectation value.\n",
     "</Admonition>"
    ]
   },
@@ -143,9 +143,9 @@
    "id": "8a03df45-252b-424f-9fe0-9748084f14c3",
    "metadata": {},
    "source": [
-    "The next step is then to generate the *subexperiments* to be executed on a QPU. This is done through the [`generate_cutting_experiments`](../api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) which accepts circuit and observable arguments as dictionaries mapping the qubit partition label to the respective *subcircuit* and *subobservable*.\n",
+    "The next step is then to generate the *subexperiments* to be executed on a QPU. This is done through the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method, which accepts circuit and observable arguments as dictionaries mapping the qubit partition label to the respective *subcircuit* and *subobservable*.\n",
     "\n",
-    "To estimate the expectation value of the full-sized circuit, many subexperiments are generated from the decomposed gates' joint quasiprobability distribution and then executed on one or more QPUs. The number of samples to be taken from this distribution is controlled by the `num_samples` argument.\n",
+    "To estimate the expectation value of the full-sized circuit, many subexperiments are generated from the decomposed gates' joint quasi-probability distribution and then executed on one or more QPUs. The number of samples to be taken from this distribution is controlled by the `num_samples` argument.\n",
     "\n",
     "The following code block generates the subexperiments and executes them using the `Sampler` primitive on a local simulator. (To run these on a QPU, change the `backend` to your chosen QPU resource.)"
    ]
@@ -189,7 +189,7 @@
    "id": "64e762ad-0660-4c78-8ea7-fb9d226357d7",
    "metadata": {},
    "source": [
-    "Lastly the expectation value of the full circuit can be reconstructed using the [`reconstruct_expectation_values`](../api/qiskit-addon-cutting/qiskit-addon-cutting#reconstruct_expectation_values) method.\n",
+    "Lastly, the expectation value of the full circuit can be reconstructed using the [`reconstruct_expectation_values`](/api/qiskit-addon-cutting/qiskit-addon-cutting#reconstruct_expectation_values) method.\n",
     "\n",
     "The code block below reconstructs the results and compares them with the exact expectation value."
    ]
@@ -244,9 +244,9 @@
    "source": [
     "## Gate cutting to reduce circuit depth\n",
     "\n",
-    "Next we'll demonstrate a workflow which reduces a circuit's depth by cutting distant gates, avoiding a large series of swap gates that would otherwise be introduced.\n",
+    "The following workflow reduces a circuit's depth by cutting distant gates, avoiding a large series of swap gates that would otherwise be introduced.\n",
     "\n",
-    "We'll start first with the [`EfficientSU2`](../api/qiskit/qiskit.circuit.library.EfficientSU2) ansatz, but with \"circular\" entanglement in order to introduce distant gates. We'll also define the same observable to measure as the previous example."
+    "Start with the [`EfficientSU2`](/api/qiskit/qiskit.circuit.library.EfficientSU2) ansatz, but with \"circular\" entanglement in order to introduce distant gates. Here you will define the same observable to measure as the previous example."
    ]
   },
   {
@@ -302,7 +302,7 @@
    "id": "8ef29b75-e790-4f3a-b2f7-4a18928cf5e6",
    "metadata": {},
    "source": [
-    "Each of the [`CNOT`](../api/qiskit/qiskit.circuit.library.CXGate) gates between qubits $q_0$ and $q_3$ will introduce two swap gates after transpilation (assuming the qubits are connected together in a straight line). To avoid this increase in depth, we can replace these distant gates with [`TwoQubitQPDGate`s](../api/qiskit-addon-cutting/qpd-two-qubit-qpd-gate) using the [`cut_gates()`](../api/qiskit-addon-cutting/qiskit-addon-cutting#cut_gates) method.  This function will also return a list of [`QPDBasis`](../api/qiskit-addon-cutting/qpd-qpd-basis) instances - one for each decomposition."
+    "Each of the [`CNOT`](/api/qiskit/qiskit.circuit.library.CXGate) gates between qubits $q_0$ and $q_3$ introduce two swap gates after transpilation (assuming the qubits are connected in a straight line). To avoid this increase in depth, you can replace these distant gates with [`TwoQubitQPDGate`s](/api/qiskit-addon-cutting/qpd-two-qubit-qpd-gate) using the [`cut_gates()`](/api/qiskit-addon-cutting/qiskit-addon-cutting#cut_gates) method.  This function also returns a list of [`QPDBasis`](../api/qiskit-addon-cutting/qpd-qpd-basis) instances - one for each decomposition."
    ]
   },
   {
@@ -342,9 +342,9 @@
    "id": "d86da948-fd26-40a9-bf58-faabb99b7a9c",
    "metadata": {},
    "source": [
-    "Now that the cut gate instructions have been added, the subexperiments will have a smaller depth after transpilation than the original circuit. The code snippet below generates the subexperiments using the [`generate_cutting_experiments`](../api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) as before, but for this example we just use the `qpd_circuit` instead of dictionaries since we did not partition the problem.\n",
+    "Now that the cut gate instructions have been added, the subexperiments will have a smaller depth after transpilation than the original circuit. The code snippet below generates the subexperiments using the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method as before, but for this example, use the `qpd_circuit` instead of dictionaries since you did not partition the problem.\n",
     "\n",
-    "Once the subexperiments are generated, we can then transpile them and use the `Sampler` primitive to sample the distribution and reconstruct the estimated expectation values. The following code block generates the subexperiments, transpiles and executes them, then reconstructs the results and compares them to the exact expectation value."
+    "Once the subexperiments are generated, you can then transpile them, then use the `Sampler` primitive to sample the distribution and reconstruct the estimated expectation values. The following code block generates, transpiles, and executes the subexperiments. It then reconstructs the results and compares them to the exact expectation value."
    ]
   },
   {
@@ -408,7 +408,7 @@
   }
  ],
  "metadata": {
-  "description": "A couple worked examples of gate cutting using the circuit cutting addon to get started with the package",
+  "description": "Two worked examples of gate cutting using the circuit cutting addon to get started with the package",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
