--- a/docs/guides/qiskit-addons-cutting.mdx
+++ b/docs/guides/qiskit-addons-cutting.mdx
@@ -31,7 +31,7 @@ pip install qiskit-addon-cutting
 Click here to read how to install this package manually.
 </summary>
 
-If you wish to contribute to this package or want to install it manually, first clone the repository:
+To contribute to this package or to install it manually, first clone the repository:
 
 ```bash
 git clone git@github.com:Qiskit/qiskit-addon-cutting.git
